Ajuste no footer

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Carter+One&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/2a2ac02fa4.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
